# cinelog_server

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  conftest.py  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.prod.yml  firebase.e2e.json  main.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.claude/agent-memory/docs-writer/: MEMORY.md  project_docs_structure.md
.claude/agent-memory/pr-writer/: MEMORY.md  project_repo_conventions.md
.claude/agent-memory/unit-test-writer/: MEMORY.md  project_test_conventions.md
.claude/agents/: branch-code-reviewer.md  docs-writer.md  pr-writer.md  unit-test-writer.md
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: code_style.yml  e2e_tests.yml  integration_tests.yml  migrate.yml  run_tests.yml  security.yml  typecheck.yml  unit_tests.yml
app/: __init__.py
app/config/: auth_rate_limit_config.py  cors.py  public_routes.py  rate_limiter.py  redis.py  stats.py
app/controllers/: auth_controller.py  log_controller.py  movie_controller.py  movie_rating_controller.py  stats_controller.py  user_controller.py
app/dependencies/: auth_dependency.py  service_dependency.py
app/integrations/: __init__.py  firebase.py
app/middleware/: csrf_middleware.py  rate_limit_session_middleware.py
app/middlewares/: auth_middleware.py  csrf_middleware.py
app/models/: base_entity.py  log.py  movie.py  movie_rating.py  user.py
app/repository/: firebase_auth_repository.py  log_cache_repository.py  log_repository.py  movie_rating_repository.py  movie_repository.py  user_repository.py
app/schemas/: auth_schemas.py  error_schema.py  log_schemas.py  movie_rating_schemas.py  movie_schemas.py  stats_schemas.py  tmdb_schemas.py  user_schemas.py
app/services/: auth_rate_limit_service.py  auth_service.py  cache_service.py  email_service.py  log_service.py  movie_rating_service.py  movie_service.py  password_service.py  rate_limit_cache_service.py  stats_cache_service.py  stats_service.py  tmdb_cache_service.py  tmdb_service.py  token_service.py  user_service.py
app/types/: __init__.py  common_validation.py  log_validation.py  user_validation.py
app/utils/: access_token_utils.py  auth_utils.py  datetime_utils.py  error_codes.py  error_codes_utils.py  exceptions.py  exceptions_utils.py  generate_access_token.py  hash_password_utils.py  object_id_utils.py  rate_limit_utils.py  sanitize_utils.py
docs/: README.md  authentication.md  e2e-testing.md  migrations.md  redis-caching.md
docs/functional/: authentication.md  logs-api.md  profile-visibility.md  rate-limiting.md  tmdb-service.md
docs/technical/: authentication.md  code-quality-ci.md  cors-configuration.md  deployment-options.md  e2e-testing.md  migrations.md  profile-visibility.md  pydantic_types_and_validators.md  rate-limiting.md  redis-caching.md  service-dependencies.md  stats-caching.md  tmdb-service.md
migrations/: 001_movie_ids_to_objectid.py  002_add_profile_visibility.py  __init__.py  runner.py
tests/: conftest.py  test_user_model.py
tests/controllers/: test_log_controller.py
tests/dependencies/: test_auth_dependency.py
tests/e2e/: conftest.py  test_auth_e2e.py  test_log_e2e.py  test_movie_rating_e2e.py  test_user_e2e.py
tests/integrations/: conftest.py  test_auth_integration.py
tests/models/: test_log_model.py  test_user_model.py
tests/repository/: test_log_repository.py  test_movie_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_auth_service_new.py
tests/units/: conftest.py
tests/units/config/: test_cors.py  test_redis.py
tests/units/controllers/: conftest.py  test_auth_controller.py  test_log_controller.py  test_movie_controller.py  test_movie_rating_controller.py  test_rate_limiting.py  test_stats_controller.py  test_user_controller.py
tests/units/dependencies/: test_auth_dependency.py
tests/units/integrations/: test_firebase_integration.py
tests/units/middleware/: test_csrf_middleware.py
tests/utils/: test_access_token_utils.py  test_generate_access_token_util.py  test_generate_access_token_utils.py  test_hash_password_utils.py
(+32 files in other folders)
