[project]
name = "cinelog-server"
version = "0.1.0"
description = "Cinelog FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "beanie==2.1.0",
    "bcrypt==5.0.0",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "pydantic[email]==2.12.5",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "redis[hiredis]==7.4.0",
    "uvicorn==0.44.0",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "freezegun==1.5.5",
    "mypy==1.20.0",
    "mongomock-motor==0.0.36",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.9",
    "pip-audit>=2.10.0",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
