[project]
name = "cinelog-server"
version = "0.1.0"
description = "Cinelog FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "beanie==2.0.1",
    "bcrypt==5.0.0",
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "pydantic[email]==2.12.5",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "redis[hiredis]==7.4.0",
    "uvicorn==0.42.0",
    "slowapi~=0.1.9",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "freezegun==1.5.5",
    "mypy==1.19.1",
    "mongomock-motor==0.0.36",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.7",
    "pip-audit>=2.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
    # FastAPI dependency injection intentionally uses function calls in defaults.
    "B008",
    # Project exception naming follows the existing AppException convention.
    "N818",
    # Cookie, token, and test fixture names produce false positives for hardcoded secret checks.
    "S105",
    "S106",
    "S107",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Pytest tests should use bare asserts and broad exception assertions where behavior requires it.
    "B017",
    "PT011",
    "S101",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
